--- a/experiments/configs/cub_mixcem_complete.yaml
+++ b/experiments/configs/cub_mixcem_complete.yaml
@@ -11,6 +11,12 @@ model_selection_groups:
   - ["^(ProbCBM_).*$", "ProbCBM (Baseline)"]
   - ["^(PCBM_).*$", "Posthoc CBM (Baseline)"]
   - ["^(HybridPCBM_).*$", "Posthoc Hybrid CBM (Baseline)"]
+  - ["^(ConceptMixIntCEM).*(_ce_0_).*$", "ConceptMixIntCEM No Calibration (Baseline)"]
+  - ["^(ConceptMixIntCEM_0).*(_ce_30_).*$", "ConceptMixIntCEM No Pretaining (Baseline)"]
+  - ["^(ConceptMixIntCEM_5).*(_ce_30_).*$", "ConceptMixIntCEM Pretrained (Baseline)"]
+  - ["^(ConceptMixCEM).*(_ce_0_).*$", "ConceptMixCEM No Calibration (Baseline)"]
+  - ["^(ConceptMixCEM_0).*(_ce_30_).*$", "ConceptMixCEM No Pretaining (Baseline)"]
+  - ["^(ConceptMixCEM_5).*(_ce_30_).*$", "ConceptMixCEM Pretrained (Baseline)"]
 
 
 model_selection_metrics:
@@ -255,89 +261,89 @@ runs:
       - dyn_training_intervention_prob
     grid_search_mode: exhaustive
 
-  - architecture: 'ConceptEmbeddingModel'
-    run_name: "CEM_clip_Baseline_emb_size_{emb_size}_cwl_{concept_loss_weight}"
-    sigmoidal_prob: True
-    emb_size: 16
-    training_intervention_prob: 0.25
-    embedding_activation: "leakyrelu"
+  # - architecture: 'ConceptEmbeddingModel'
+  #   run_name: "CEM_clip_Baseline_emb_size_{emb_size}_cwl_{concept_loss_weight}"
+  #   sigmoidal_prob: True
+  #   emb_size: 16
+  #   training_intervention_prob: 0.25
+  #   embedding_activation: "leakyrelu"
 
-    dataset_config:
-      dataset: "cub"
-      num_workers: 8
-      batch_size: 64 # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-      # from_clip_embedding: True # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-      clip_model: 'ViT-B/32' # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-      # input_features: 512 # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-      zero_shot_clip_attrs: True # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+  #   dataset_config:
+  #     dataset: "cub"
+  #     num_workers: 8
+  #     batch_size: 64 # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+  #     # from_clip_embedding: True # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+  #     clip_model: 'ViT-B/32' # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+  #     # input_features: 512 # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+  #     zero_shot_clip_attrs: True # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
-      # DATASET VARIABLES
-      root_dir: /homes/me466/data/CUB200/
-      sampling_percent: 1
-      sampling_groups: True
-      test_subsampling: 1
-      weight_loss: False # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+  #     # DATASET VARIABLES
+  #     root_dir: /homes/me466/data/CUB200/
+  #     sampling_percent: 1
+  #     sampling_groups: True
+  #     test_subsampling: 1
+  #     weight_loss: False # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
 
-  - architecture: 'MixingConceptEmbeddingModel'
-    run_name: "MixCEM_clip_fe_{fixed_embeddings}_i_{initial_concept_embeddings}_n_{normalize_embs}_cos_{use_cosine_similarity}_e_{use_linear_emb_layer}_s_{fixed_scale}_n_extra_{n_discovered_concepts}_entr_{discovered_probs_entropy}_dis_{intervention_task_discount}_ip_{training_intervention_prob}_dip_{dyn_training_intervention_prob}_cl_{contrastive_loss_weight}_emb_size_{emb_size}_ml_{intermediate_task_concept_loss}_cwl_{concept_loss_weight}"
-    training_intervention_prob: [[0.25, 0.5, 0.75, 1]]
-    emb_size: [512]
-    embedding_activation: null
-    n_discovered_concepts: [25, 0]
-    concept_loss_weight: [10]
-    contrastive_loss_weight: [0]
-    mix_ground_truth_embs: True
-    shared_emb_generator: [True]
-    normalize_embs: False
-    sample_probs: False
-    cond_discovery: False
-    intermediate_task_concept_loss: [0]
-    task_concept_loss: 1
-    intervention_task_discount: [1.01, 1.05] #, 1.5]
-    discovered_probs_entropy: 0
-    dyn_training_intervention_prob: [0.1] #, 0.25]
-    initial_concept_embeddings: [null]  # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-    fixed_embeddings: [False]  # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-    use_cosine_similarity: [False]
-    # c_extractor_arch: "identity" # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-    # c_extractor_arch: "mlp" # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-    # c_extractor_arch_layers: [512, 512] # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-    use_linear_emb_layer: [False] #, True]  # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-    fixed_scale: [null] # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-    # learning_rate: 0.001 # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-    grid_variables:
-      - concept_loss_weight
-      - n_discovered_concepts
-      - contrastive_loss_weight
-      - shared_emb_generator
-      - emb_size
-      - intermediate_task_concept_loss
-      - intervention_task_discount
-      - training_intervention_prob
-      - dyn_training_intervention_prob
-      - fixed_embeddings
-      - use_cosine_similarity
-      - use_linear_emb_layer
-      - fixed_scale
-      - initial_concept_embeddings
-    grid_search_mode: exhaustive
+  # - architecture: 'MixingConceptEmbeddingModel'
+  #   run_name: "MixCEM_clip_fe_{fixed_embeddings}_i_{initial_concept_embeddings}_n_{normalize_embs}_cos_{use_cosine_similarity}_e_{use_linear_emb_layer}_s_{fixed_scale}_n_extra_{n_discovered_concepts}_entr_{discovered_probs_entropy}_dis_{intervention_task_discount}_ip_{training_intervention_prob}_dip_{dyn_training_intervention_prob}_cl_{contrastive_loss_weight}_emb_size_{emb_size}_ml_{intermediate_task_concept_loss}_cwl_{concept_loss_weight}"
+  #   training_intervention_prob: [[0.25, 0.5, 0.75, 1]]
+  #   emb_size: [512]
+  #   embedding_activation: null
+  #   n_discovered_concepts: [25, 0]
+  #   concept_loss_weight: [10]
+  #   contrastive_loss_weight: [0]
+  #   mix_ground_truth_embs: True
+  #   shared_emb_generator: [True]
+  #   normalize_embs: False
+  #   sample_probs: False
+  #   cond_discovery: False
+  #   intermediate_task_concept_loss: [0]
+  #   task_concept_loss: 1
+  #   intervention_task_discount: [1.01, 1.05] #, 1.5]
+  #   discovered_probs_entropy: 0
+  #   dyn_training_intervention_prob: [0.1] #, 0.25]
+  #   initial_concept_embeddings: [null]  # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+  #   fixed_embeddings: [False]  # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+  #   use_cosine_similarity: [False]
+  #   # c_extractor_arch: "identity" # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+  #   # c_extractor_arch: "mlp" # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+  #   # c_extractor_arch_layers: [512, 512] # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+  #   use_linear_emb_layer: [False] #, True]  # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+  #   fixed_scale: [null] # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+  #   # learning_rate: 0.001 # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+  #   grid_variables:
+  #     - concept_loss_weight
+  #     - n_discovered_concepts
+  #     - contrastive_loss_weight
+  #     - shared_emb_generator
+  #     - emb_size
+  #     - intermediate_task_concept_loss
+  #     - intervention_task_discount
+  #     - training_intervention_prob
+  #     - dyn_training_intervention_prob
+  #     - fixed_embeddings
+  #     - use_cosine_similarity
+  #     - use_linear_emb_layer
+  #     - fixed_scale
+  #     - initial_concept_embeddings
+  #   grid_search_mode: exhaustive
 
-    dataset_config:
-      dataset: "cub"
-      num_workers: 8
-      batch_size: 64 # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-      # from_clip_embedding: True # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-      clip_model: 'ViT-B/32' # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-      # input_features: 512 # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-      zero_shot_clip_attrs: True # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+  #   dataset_config:
+  #     dataset: "cub"
+  #     num_workers: 8
+  #     batch_size: 64 # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+  #     # from_clip_embedding: True # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+  #     clip_model: 'ViT-B/32' # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+  #     # input_features: 512 # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+  #     zero_shot_clip_attrs: True # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
-      # DATASET VARIABLES
-      root_dir: /homes/me466/data/CUB200/
-      sampling_percent: 1
-      sampling_groups: True
-      test_subsampling: 1
-      weight_loss: False # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+  #     # DATASET VARIABLES
+  #     root_dir: /homes/me466/data/CUB200/
+  #     sampling_percent: 1
+  #     sampling_groups: True
+  #     test_subsampling: 1
+  #     weight_loss: False # DIFFERENCE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
   # - architecture: 'MixingConceptEmbeddingModel'
   #   run_name: "MixCEM_esup_fe_{fixed_embeddings}_i_{initial_concept_embeddings}_n_{normalize_embs}_cos_{use_cosine_similarity}_e_{use_linear_emb_layer}_s_{fixed_scale}_n_extra_{n_discovered_concepts}_entr_{discovered_probs_entropy}_dis_{intervention_task_discount}_ip_{training_intervention_prob}_dip_{dyn_training_intervention_prob}_cl_{contrastive_loss_weight}_emb_size_{emb_size}_ml_{intermediate_task_concept_loss}_cwl_{concept_loss_weight}"
@@ -460,4 +466,150 @@ runs:
       - reg_strength
       - l1_ratio
       - svd_penalty
+    grid_search_mode: exhaustive
+
+  - architecture: 'CertificateConceptEmbeddingModel'
+    run_name: "ConceptMixIntCEM_{global_epochs}_{max_epochs}_{freeze_global_components}_t_{temperature}_mt_{max_temperature}_pc_{positive_calibration}_cwc_{class_wise_temperature}_{calibrate_global_logits}_{calibrate_dynamic_logits}_{init_dyn_temps}_{init_global_temps}_g_ood_{global_ood_prob}_{entire_global_prob}_emb_{emb_size}_idp_{inference_dyn_prob}_hs_{hard_eval_selection}_ce_{calibration_epochs}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+    load_path_name: "ConceptMixIntCEM_{global_epochs}_{max_epochs}_{freeze_global_components}_t_{temperature}_mt_{max_temperature}_pc_{positive_calibration}_cwc_{class_wise_temperature}_{calibrate_global_logits}_{calibrate_dynamic_logits}_{init_dyn_temps}_{init_global_temps}_g_ood_{global_ood_prob}_{entire_global_prob}_emb_{emb_size}_idp_{inference_dyn_prob}_hs_None_ce_0_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+
+    concept_loss_weight: [1]
+    emb_size: [16]
+    temperature: [1]
+    max_temperature: 1
+    shared_emb_generator: True
+
+    # OOD stuff
+    certificate_loss_weight: [0]
+    ood_dropout_prob: [0]
+    global_ood_prob: [0.5]
+    entire_global_prob: [0]
+    pooling_mode: ['iss']
+    selection_mode: ['max_concept_confidence']
+    hard_eval_selection: [null, 0.5]
+    selection_sample: [False]
+    calibration_epochs: [0, 30]
+    mixed_probs: True
+    contrastive_reg: 0
+    calibrate_dynamic_logits: True
+    calibrate_global_logits: True
+    finetune_with_val: [True]
+    init_dyn_temps: 1
+    init_global_temps: 1
+    global_temp_reg: 0
+    inference_dyn_prob: False
+    learnable_temps: False
+    positive_calibration: False
+    class_wise_temperature: False
+    separate_calibration: False
+    freeze_global_components: [False]
+    global_epochs: [5, 0]
+    print_eval_only: True
+    counter_limit: 0
+
+    ###############################################################################################
+
+    # IntCEM stuff
+    embedding_activation: null
+    training_intervention_prob: [0.25]
+    intervention_task_discount: [1.1]
+    use_concept_groups: True
+    int_model_use_bn: True
+    int_model_layers: [128, 128, 64, 64]
+    max_horizon: 6
+    horizon_rate: 1.005
+    intervention_weight: [0.1]
+
+    grid_variables:
+      - training_intervention_prob
+      - intervention_task_discount
+      - emb_size
+      - certificate_loss_weight
+      - ood_dropout_prob
+      - selection_mode
+      - hard_eval_selection
+      - selection_sample
+      - global_ood_prob
+      - entire_global_prob
+      - temperature
+      - finetune_with_val
+      - calibration_epochs
+      - concept_loss_weight
+      - pooling_mode
+      - intervention_weight
+      - freeze_global_components
+      - global_epochs
+    grid_search_mode: exhaustive
+
+
+  # Mixing approach for vanilla CEMs
+  - architecture: 'CertificateConceptEmbeddingModel'
+    run_name: "ConceptMixCEM_{global_epochs}_{max_epochs}_{freeze_global_components}_t_{temperature}_mt_{max_temperature}_pc_{positive_calibration}_cwc_{class_wise_temperature}_{calibrate_global_logits}_{calibrate_dynamic_logits}_{init_dyn_temps}_{init_global_temps}_g_ood_{global_ood_prob}_{entire_global_prob}_emb_{emb_size}_idp_{inference_dyn_prob}_hs_{hard_eval_selection}_ce_{calibration_epochs}_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+    load_path_name: "ConceptMixCEM_{global_epochs}_{max_epochs}_{freeze_global_components}_t_{temperature}_mt_{max_temperature}_pc_{positive_calibration}_cwc_{class_wise_temperature}_{calibrate_global_logits}_{calibrate_dynamic_logits}_{init_dyn_temps}_{init_global_temps}_g_ood_{global_ood_prob}_{entire_global_prob}_emb_{emb_size}_idp_{inference_dyn_prob}_hs_None_ce_0_{finetune_with_val}_tip_{training_intervention_prob}_itd_{intervention_task_discount}_iw_{intervention_weight}_cwl_{concept_loss_weight}"
+
+    concept_loss_weight: [1, 10]
+    emb_size: [16]
+    temperature: [1]
+    max_temperature: 1
+    shared_emb_generator: True
+
+    # OOD stuff
+    certificate_loss_weight: [0]
+    ood_dropout_prob: [0]
+    global_ood_prob: [0.5]
+    entire_global_prob: [0]
+    pooling_mode: ['iss']
+    selection_mode: ['max_concept_confidence']
+    hard_eval_selection: [null]
+    selection_sample: [False]
+    calibration_epochs: [0, 30]
+    mixed_probs: True
+    contrastive_reg: 0
+    calibrate_dynamic_logits: True
+    calibrate_global_logits: True
+    finetune_with_val: [True]
+    init_dyn_temps: 1
+    init_global_temps: 1
+    global_temp_reg: 0
+    inference_dyn_prob: False
+    learnable_temps: False
+    positive_calibration: False
+    class_wise_temperature: False
+    separate_calibration: False
+    freeze_global_components: [False]
+    global_epochs: [5, 0]
+    print_eval_only: True
+    counter_limit: 0
+
+    ############################################################################
+
+    # IntCEM stuff cancelled so that it behaves as a CEM
+    embedding_activation: null
+    training_intervention_prob: [0.25]
+    intervention_task_discount: [1]
+    use_concept_groups: True
+    int_model_use_bn: False
+    int_model_layers: []
+    max_horizon: 1
+    horizon_rate: 1
+    intervention_weight: [0]
+
+    grid_variables:
+      - training_intervention_prob
+      - intervention_task_discount
+      - emb_size
+      - certificate_loss_weight
+      - ood_dropout_prob
+      - selection_mode
+      - hard_eval_selection
+      - selection_sample
+      - global_ood_prob
+      - entire_global_prob
+      - temperature
+      - finetune_with_val
+      - calibration_epochs
+      - concept_loss_weight
+      - pooling_mode
+      - intervention_weight
+      - freeze_global_components
+      - global_epochs
     grid_search_mode: exhaustive
